	* Fixed FUBAR'd Bahnschrift Bold and Regular 18 fonts (their jsons got mixed)
	* Fixed obtaining the size of multi-line text (all lines were being treated as one)
	* Fixed a bug where power armor effects were never applied
	* Fixed ability to press arrow keys in legacy UI fields
	* Fixed MSBuild warning generated by build path not having a trailing slash
	* Fixed the window pointer being used as the GLFW error callback because of inability to read documentation
	* Fixed crash bug when picking up cells
	* Fixed potential crash with the server WriteIP command 
	* Fixed 620 compile warnings, 981 to go (most of them are due to the compiler being 64-bit and the default decimal type being DOUBLE instead of float)

REMOVALS:
	* Obsolete Windows-only code
	* Removed the unused Legacy UI menulist control as first step to removing legacy UI
	* No longer used (since 0.0.8 or earlier...) stats (replaced with loadout system)
		* STAT_SELECTED_ICON
		* STAT_SELECTED_ITEM
		* STAT_HELPICON

OTHER CHANGES:
	* Made update prompt game-agnostic
	* Changed default windowed resolution to 1366*768 (instead of 1024*768), so the game runs in 16:9 widescreen by default

* NOTE: con_line_length only has any effect on dedicated servers

Version 0.1.0-pre1 (Build 659)
June 29, 2024

NEW FEATURES:
	* Early version of new map - Hellspire
	* The way that game assets get loaded has changed!
		* The game name and asset path are now loaded from the gameinfo.json file instead of being hardcoded by default
		* You can still use +set game <name> (or the equivalent alias of +set game_asset_path <name>) to change the name of the game
	* Made many more physics parameters tunable CVars:
		* This adds the following CVars:
			* sv_friction
			* sv_waterfriction
			* sv_maxspeed_director
			* sv_maxspeed_player
			* sv_accelerate_director
			* sv_accelerate_player
			* sv_duckspeed
			* sv_accelerate
			* sv_wateraccelerate
			* sv_friction - default value of 6
			* sv_waterfriction - default value of 1