@@ -61,7 +61,13 @@ BUG FIXES:
 	* Fixed a bug where power armor effects were never applied
 	* Fixed ability to press arrow keys in legacy UI fields
 	* Fixed MSBuild warning generated by build path not having a trailing slash
+	* Fixed UI not being reset when disconnecting from server
 	* Fixed the window pointer being used as the GLFW error callback because of inability to read documentation
+	* Fixed incorrect parameters being used for GLFW error callback
+	* Fixed a bug where if an input-capturing UI was running, and the client was disconnected, the client would not send command updates.
+		* This caused an issue where you could not connect to local servers when the main menu UI was running.
+	* Fixed a bug with the code that handled Game DLL changes that would restart the video and sound subsystems even if the game dll had not changed, leading to the renderer 
+	re-initialising every time after the first that the game connected to a server
 	* Fixed crash bug when picking up cells
 	* Fixed potential crash with the server WriteIP command 
 	* Fixed 620 compile warnings, 981 to go (most of them are due to the compiler being 64-bit and the default decimal type being DOUBLE instead of float)
@@ -73,6 +79,7 @@ REMOVALS:
 		* STAT_SELECTED_ICON
 		* STAT_SELECTED_ITEM
 		* STAT_HELPICON
+	* The last remnants of the legacy loadout system
 
 OTHER CHANGES:
 	* Made update prompt game-agnostic
